--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,8 @@
 kind: pipeline
 name: default
 
+# Test PR
+
 steps:
   - name: build & push release
     image: thegeeklab/drone-docker-buildx:20.11@sha256:327b6fb15dc841cf80c7c429f60d695efd7c7a476fe363afac25a58befd4c203
