--- a/.drone.yml
+++ b/.drone.yml
@@ -6,10 +6,12 @@ name: default
 
 steps:
   - name: build
-    image: thegeeklab/drone-docker-buildx:20.12@sha256:f17c2e4008ad8cee699b26d97d52974bf6e78e700ed654e589191a5afac56e81
+    image: thegeeklab/drone-docker-buildx:20.12.1@sha256:5439d579562a605953b386df64f1a469720f5358fa1bd0bdf225ae8d48d652b7
     settings:
       auto_tag: true
       repo: mazzolino/drone-test
+      cache_from: mazzolino/drone-test:cache
+      cache_to: mazzolino/drone-test:cache
       platforms:
         - linux/amd64
         - linux/arm64
@@ -30,12 +32,13 @@ name: build pr
 
 steps:
   - name: build pr
-    image: thegeeklab/drone-docker-buildx:20.12@sha256:f17c2e4008ad8cee699b26d97d52974bf6e78e700ed654e589191a5afac56e81
+    image: thegeeklab/drone-docker-buildx:20.12.1@sha256:5439d579562a605953b386df64f1a469720f5358fa1bd0bdf225ae8d48d652b7
     settings:
       repo: mazzolino/drone-test
       tags:
         - pr-${DRONE_PULL_REQUEST}
-      dry_run: true
+      cache_from: mazzolino/drone-test:cache
+      cache_to: mazzolino/drone-test:cache
       platforms:
         - linux/amd64
         - linux/arm64
@@ -48,3 +51,8 @@ steps:
 trigger:
   event:
     - pull_request
+---
+kind: signature
+hmac: 0b9387e6d04857af29b1a0c0ea9dc84c488305f9334cd4becd0b1cdcc019bbc7
+
+...
